fix spacing 2

--- a/style.css
+++ b/style.css
@@ -299,6 +299,10 @@ hr {
   margin-top: 16px;
 }
 
+#btn-geef-prijs {
+  margin-bottom: 14px;
+} 
+
 
 /* =========================
    DISABLED PRIJSKNOP
